# device-simulator

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
include/: mqtt_client.h
src/: main.cpp  simulator  simulator.cpp
